Additional code errors corrected

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -47,7 +47,7 @@
           class="validate"
           required
         />
-        <label for="icon_prefix">Recipe Name</label>
+        <label for="recipe_name">Recipe Name</label>
       </div>
     </div>
     <!-- Recipe Ingredients -->
@@ -64,7 +64,7 @@
           class="validate"
           required
         />
-        <label for="icon_prefix">Recipe Ingredients</label>
+        <label for="recipe_ingredients">Recipe Ingredients</label>
       </div>
     </div>
     <!-- Recipe Method -->
@@ -81,7 +81,7 @@
         >
 {{- recipe.recipe_method -}}</textarea
         >
-        <label for="icon_prefix">Recipe Method</label>
+        <label for="recipe_method">Recipe Method</label>
       </div>
     </div>
 
