--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -27,7 +27,7 @@
             class="validate"
             required
           />
-          <label for="icon_prefix">Username</label>
+          <label for="username">Username</label>
         </div>
       </div>
       <!-- Password -->
