--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
   </header>
 
   <body>
-    <section>
+    <div>
       <!-- flash messages -->
       {% with messages = get_flashed_messages() %} {% if messages %} {% for
       message in messages %}
@@ -126,7 +126,7 @@
         <h3 class="red lighten-2 center-align">{{ message }}</h3>
       </div>
       {% endfor %} {% endif %} {% endwith %}
-    </section>
+    </div>
 
     <main class="container">
       {% block content %} {% endblock %}
