Small comment amends to app.py and removing required from image URL

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -53,7 +53,7 @@
         ></textarea>
         <label for="recipe_ingredients">Recipe Ingredients</label>
         <span class="helper-text" data-error="wrong" data-success="right"
-          >Add each ingredient on a new line.</span
+          >Each ingredient must be entered on a new line.</span
         >
       </div>
     </div>
@@ -88,11 +88,10 @@
           minlength="5"
           pattern="https://.*"
           class="validate"
-          required
         />
         <label for="image_url">Add an image</label>
         <span class="helper-text" data-error="wrong" data-success="right"
-          >Add a URL for an image. Be sure to include 'https://' also</span
+          >To add an image to your recipe, paste an image URL here. You must include 'https://'</span
         >
       </div>
     </div>
