--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 
-        <div class="row">
+		<div class="row">
 			<div class="input-field col s12">
 				<i class="fas fa-images prefix"></i>
 				<input
@@ -91,6 +91,7 @@
           pattern="https://.*"
           value="{{ recipe.image_url }}"
           class="validate"
+          required
         />
 				<label for="image_url">Insert new image</label>
 				<span class="helper-text" data-error="wrong" data-success="right"
@@ -99,32 +100,33 @@
 		</div>
 		<div>
 
-		<!-- Submit Recipe Button -->
-		<div class="row">
-			<div class="col s12">
-				<button type="submit" class="col s4 btn-large red lighten-2">
+			<!-- Submit Recipe Button -->
+			<div class="row">
+				<div class="col s12">
+					<button type="submit" class="col s4 btn-large red lighten-2">
           Update Recipe
         </button>
-				<!-- Cancel Button -->
-				<a href="{{ url_for('find_recipe') }}" class="col s4 btn-large red lighten-2">Cancel</a>
-				<!-- Delete Recipe Button -->
-				<a href="#delete-modal" class="col s4 btn-large red lighten-1 modal-trigger">Delete Recipe</a>
-			</div>
-		</div>
-
-		<!-- Modal Structure -->
-		<div id="delete-modal" class="modal">
-			<div class="modal-content-container">
-				<div class="modal-content">
-					<h4>Are you sure you want to delete?</h4>
-					<p>
-						If you delete your recipe, this can not be undone.
-					</p>
+					<!-- Cancel Button -->
+					<a href="{{ url_for('find_recipe') }}" class="col s4 btn-large red lighten-2">Cancel</a>
+					<!-- Delete Recipe Button -->
+					<a href="#delete-modal" class="col s4 btn-large red lighten-1 modal-trigger">Delete Recipe</a>
 				</div>
-				<div class="modal-footer">
-					<a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-						class="modal-close btn-large red lighten-1">Delete Recipe</a>
-					<a class="modal-close btn-large red lighten-2">Cancel</a>
+			</div>
+
+			<!-- Modal Structure -->
+			<div id="delete-modal" class="modal">
+				<div class="modal-content-container">
+					<div class="modal-content">
+						<h4>Are you sure you want to delete?</h4>
+						<p>
+							If you delete your recipe, this can not be undone.
+						</p>
+					</div>
+					<div class="modal-footer">
+						<a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+							class="modal-close btn-large red lighten-1">Delete Recipe</a>
+						<a class="modal-close btn-large red lighten-2">Cancel</a>
+					</div>
 				</div>
 			</div>
 		</div>
