removing unused classes

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -103,13 +103,13 @@
 			<!-- Submit/Update Recipe Button -->
 			<div class="row edit-buttons-row">
 				<div class="edit-buttons col s12">
-					<button type="submit" class="edit-btn col s12 m3 btn-large red lighten-2">
+					<button type="submit" class="col s12 m3 btn-large red lighten-2">
           Update Recipe
         </button>
 					<!-- Cancel Button -->
-					<a href="{{ url_for('find_recipe') }}" class="edit-btn col  s12 m3  btn-large red lighten-3">Cancel</a>
+					<a href="{{ url_for('find_recipe') }}" class="col s12 m3  btn-large red lighten-3">Cancel</a>
 					<!-- Delete Recipe Button -->
-					<a href="#delete-modal" class="edit-btn col s12 m3 btn-large red lighten-1 modal-trigger">Delete Recipe</a>
+					<a href="#delete-modal" class="col s12 m3 btn-large red lighten-1 modal-trigger">Delete Recipe</a>
 				</div>
 			</div>
 
