--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -93,8 +93,11 @@
 			</div>
 		</div>
 		<div>
-			<input id="date_added" name="date_added" />
+			
+            <!-- Date recipe added -->
+            <input id="date_added" name="date_added" hidden/>
     </div>
+    
 			<!-- Submit Recipe Button -->
 			<div class="row">
 				<div class="col s12 center-align">
