Updating style edits

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
       type="text/css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Playfair+Display:ital@0;1&display=swap"
       rel="stylesheet"
     />
     <link
