--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container center-align">
-	<div class="col">
-		<div class="row">
+  <div class="row">
+    <div class="col s12">
 			<h1>Add a Recipe</h1>
 		</div>
 	</div>
