--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container center-align">
-	<div class="row">
-		<div class="col">
+  <div class="row">
+    <div class="col s12">
 			<h1>Find a Recipe</h1>
 		</div>
 	</div>
 </div>
+
 
 <!-- Collapsible -->
 <div class="container">
