--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container center-align">
-  <div class="col s12">
-    <div class="row">
+  <div class="row">
+    <div class="col s12">
       <h1>"{{ recipe.recipe_name }}"</h1>
     </div>
   </div>
@@ -32,10 +32,7 @@
   <!-- Recipe Image -->
   <div class="col m6 s12 recipe-image">
     <div class="card-panel">
-      <img
-        class="responsive-img"
-        src="{{ recipe.image_url }}"
-      />
+      <img class="responsive-img" src="{{ recipe.image_url }}" />
     </div>
   </div>
 </div>
