--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -16,7 +16,7 @@
 		<li>
 			<div class="row recipes collapsible-header white-text red lighten-3">
 				<div class="col s12 m3">
-					<img class="responsive-img" src="{{ recipe.image_url }}" />
+					<img class="responsive-img" src="{{ recipe.image_url }}" alt="image of {{ recipe.recipe_name }}"/>
         </div>
 
 					<div class="col s12 m7">
