--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -32,7 +32,7 @@
   <!-- Recipe Image -->
   <div class="col m6 s12 recipe-image">
     <div class="card-panel">
-      <img class="responsive-img" src="{{ recipe.image_url }}" />
+      <img class="responsive-img" src="{{ recipe.image_url }}" alt="image of {{ recipe.recipe_name }}"/>
     </div>
   </div>
 </div>
