--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -29,7 +29,7 @@
             required
           />
           <label for="username">Username</label>
-          <span class="helper-text" data-error="wrong" data-success="right"
+          <span class="helper-text"
           >Please enter the username you wish to use to sign up. This can consist of letters and numbers only, no special characters.</span
         >
         </div>
@@ -49,7 +49,7 @@
             required
           />
           <label for="password">Password</label>
-          <span class="helper-text" data-error="wrong" data-success="right"
+          <span class="helper-text"
           >Please enter the password you wish to use to log into the site in the future. This can consist of letters and numbers only and is case sensitive. No special characters.</span
         >
         </div>
