--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -16,11 +16,11 @@
         
 		<li>
 			<div class="row recipes collapsible-header white-text red lighten-3">
-				<div class="col s12 m3">
+				<div class="recipes-img col s12 m3">
 					<img class="responsive-img" src="{{ recipe.image_url }}" alt="image of {{ recipe.recipe_name }}"/>
         </div>
 
-					<div class="col s12 m7">
+					<div class="recipes-name col s12 m7">
 						<h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
 						{{ recipe.category }}
 						<p><em>by: {{ recipe.created_by }}</em></p>
