--- a/templates/index.html
+++ b/templates/index.html
@@ -87,19 +87,25 @@
 </div>
 
 <!-- Recipe of the Month -->
+<div class="container center-align recipe-of-month-title">
+  <div class="row">
+    <div class="col s12">
+      <h2>Recipe of the Month</h2>
+      <h3>Crispy Bacon Pancakes</h3>
+    </div>
+  </div>
+</div>
 <section class="recipe-month-section">
   <div class="row recipe-of-month valign-wrapper">
     <div class="col s12">
-      <div class="col m6 s12">
+      <div class="col m4 s12">
         <img
           class="responsive-img recipe-of-month-image"
           src="{{ url_for('static', filename='css/images/pancakes.jpg') }}"
           alt="Crispy Bacon Pancakes"
         />
       </div>
-      <div class="col m6 s12">
-        <h2>Recipe of the Month</h2>
-        <h3>Recipe name</h3>
+      <div class="col m4 s12">
         <h4>Ingredients</h4>
         <p>
           •140g self-raising flower<br />
@@ -111,6 +117,8 @@
           • Maple Syrup<br />
           • Bacon<br />
         </p>
+      </div>
+      <div class="col m4 s12">
         <h4>Method</h4>
         <p>
           First cook your crispy bacon…<br />
