--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="container center-align">
+<div class="container center-align recipe-of-month-title">
   <div class="row">
     <div class="col s12">
 			<h1>Find a Recipe</h1>
