--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                 ><i class="fas fa-bars"></i
               ></a>
               <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('find_recipe') }}">Find Recipe</a></li>
+                <li><a href="{{ url_for('find_recipe') }}">Find A Recipe</a></li>
                 {% if session.user %}
                 <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
                 {% else %}
@@ -90,7 +90,7 @@
       </div>
       <!-- Mobile Nav Bar -->
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="{{ url_for('find_recipe') }}">Find Recipe</a></li>
+        <li><a href="{{ url_for('find_recipe') }}">Find A Recipe</a></li>
         {% if session.user %}
         <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
         {% else %}
