Add required to image url

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -89,6 +89,7 @@
           minlength="5"
           pattern="https://.*"
           class="validate"
+          required
         />
         <label for="image_url">Add an image</label>
         <span class="helper-text" data-error="wrong" data-success="right"
