--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -11,7 +11,7 @@
 <div class="row card-panel">
   <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
     <!-- Category Selector -->
-    <div class="row">
+    <div class="row Grey lighten-1">
       <div class="input-field col s12">
         <i class="fas fa-chevron-down prefix"></i>
         <select id="category" name="category" class="validate">
