--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="row recipe_details">
-  <div class="col m6 s12 recipe-info-text">
+  <div class="col l6 s12 recipe-info-text">
     <div class="card-panel">
       <h2>Ingredients</h2>
       {% for ingredient in recipe.recipe_ingredients.splitlines() %}
@@ -30,7 +30,7 @@
   </div>
 
   <!-- Recipe Image -->
-  <div class="col m6 s12 recipe-image">
+  <div class="col l6 s12 recipe-image">
     <div class="card-panel">
       <img class="responsive-img" src="{{ recipe.image_url }}" alt="image of {{ recipe.recipe_name }}"/>
     </div>
