--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Playfair+Display:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="static/css/images/favicon.ico">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
